tests/error/experimental_errors/power_modifier.err
Error: Experimental feature (at $FILE:7:9)
  | 
5 | @guppy
6 | def main() -> None:
7 |     with power(2):
  |          ^^^^^ `power` modifier is an experimental feature

Help: Experimental features are currently disabled. You can enable them by
calling `guppylang.enable_experimental_features()`, however note that these
features are unstable and might break in the future.

Guppy compilation failed due to 1 previous error
